--- a/Power_Tag_BLE.ioc
+++ b/Power_Tag_BLE.ioc
@@ -191,7 +191,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_IPCC_Init-IPCC-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM16_Init-TIM16-false-HAL-true,8-APPE_Init-STM32_WPAN-false-HAL-false,9-MX_RF_Init-RF-false-HAL-true,0-MX_HSEM_Init-HSEM-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_IPCC_Init-IPCC-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-APPE_Init-STM32_WPAN-false-HAL-false,9-MX_RF_Init-RF-false-HAL-true,0-MX_HSEM_Init-HSEM-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
@@ -244,7 +244,9 @@ RCC.VCOSAI1OutputFreq_Value=96000000
 RF1.Mode=RF1_Activate
 RF1.Signal=RF_RF1
 RTC.Alarm-Alarm\ A=RTC_ALARM_A
-RTC.IPParameters=Alarm-Alarm A
+RTC.HourFormat=RTC_HOURFORMAT_24
+RTC.IPParameters=Alarm-Alarm A,HourFormat,WakeUpClock-WakeUp
+RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_RTCCLK_DIV16
 SH.ADCx_IN10.0=ADC1_IN10,IN10-Single-Ended
 SH.ADCx_IN10.ConfNb=1
 SH.ADCx_IN11.0=ADC1_IN11,IN11-Single-Ended
@@ -259,23 +261,46 @@ SH.ADCx_IN9.0=ADC1_IN9,IN9-Single-Ended
 SH.ADCx_IN9.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
-STM32_WPAN.AD_TYPE_COMPLETE_LOCAL_NAME=Power_Tag
-STM32_WPAN.AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH=10
+STM32_WPAN.AD_TYPE_COMPLETE_LOCAL_NAME=Power_Tag_BLE_V1
+STM32_WPAN.AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH=17
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_17=01
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_1=UID_1
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_10=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_11=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_12=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_13=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_14=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_15=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_16=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_17=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_2=UID_2
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_3=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_4=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_5=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_6=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_7=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_8=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_COMMENT_9=NN
+STM32_WPAN.AD_TYPE_MANUFACTURER_DATA_NBR=17
+STM32_WPAN.AD_TYPE_MANUFACTURER_SPECIFIC_DATA_COMPANY_IDENTIFIER=00,30
 STM32_WPAN.AD_TYPE_SHORTENED_LOCAL_NAME=Power_Tag
 STM32_WPAN.AD_TYPE_SHORTENED_LOCAL_NAME_LENGTH=10
 STM32_WPAN.CFG_LSCLK_LSE=0
 STM32_WPAN.CUSTOM_P2P_SERVER=Disabled
 STM32_WPAN.CUSTOM_TEMPLATE=Enabled
 STM32_WPAN.INCLUDE_AD_TYPE_COMPLETE_LOCAL_NAME=1
+STM32_WPAN.INCLUDE_AD_TYPE_MANUFACTURER_SPECIFIC_DATA=0
 STM32_WPAN.INCLUDE_AD_TYPE_SHORTENED_LOCAL_NAME=0
-STM32_WPAN.IPParameters=CUSTOM_P2P_SERVER,CUSTOM_TEMPLATE,INCLUDE_AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH,INCLUDE_AD_TYPE_SHORTENED_LOCAL_NAME,NUMBER_OF_SERVICES,SERVICE1_LONG_NAME,SERVICE1_SHORT_NAME,SERVICE1_CHAR1_LONG_NAME,SERVICE1_CHAR1_SHORT_NAME,SERVICE1_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE1_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR1_PROP_WRITE,SERVICE1_NUMBER_OF_CHARACTERISTICS,SERVICE1_CHAR2_LONG_NAME,SERVICE1_CHAR2_SHORT_NAME,SERVICE1_CHAR2_UUID,SERVICE1_CHAR2_PROP_NOTIFY,SERVICE1_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,CFG_LSCLK_LSE,AD_TYPE_SHORTENED_LOCAL_NAME,AD_TYPE_SHORTENED_LOCAL_NAME_LENGTH,SERVICE1_CHAR2_VALUE_LENGTH
+STM32_WPAN.IPParameters=CUSTOM_P2P_SERVER,CUSTOM_TEMPLATE,INCLUDE_AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME,AD_TYPE_COMPLETE_LOCAL_NAME_LENGTH,INCLUDE_AD_TYPE_SHORTENED_LOCAL_NAME,NUMBER_OF_SERVICES,SERVICE1_LONG_NAME,SERVICE1_SHORT_NAME,SERVICE1_CHAR1_LONG_NAME,SERVICE1_CHAR1_SHORT_NAME,SERVICE1_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE,SERVICE1_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR1_PROP_WRITE,SERVICE1_NUMBER_OF_CHARACTERISTICS,SERVICE1_CHAR2_LONG_NAME,SERVICE1_CHAR2_SHORT_NAME,SERVICE1_CHAR2_UUID,SERVICE1_CHAR2_PROP_NOTIFY,SERVICE1_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP,SERVICE1_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP,CFG_LSCLK_LSE,AD_TYPE_SHORTENED_LOCAL_NAME,AD_TYPE_SHORTENED_LOCAL_NAME_LENGTH,SERVICE1_CHAR2_VALUE_LENGTH,SERVICE1_CHAR1_VALUE_LENGTH,SERVICE1_CHAR1_LENGTH_CHARACTERISTIC,INCLUDE_AD_TYPE_MANUFACTURER_SPECIFIC_DATA,AD_TYPE_MANUFACTURER_DATA_NBR,AD_TYPE_MANUFACTURER_SPECIFIC_DATA_COMPANY_IDENTIFIER,AD_TYPE_MANUFACTURER_DATA_COMMENT_1,AD_TYPE_MANUFACTURER_DATA_COMMENT_2,AD_TYPE_MANUFACTURER_DATA_COMMENT_3,AD_TYPE_MANUFACTURER_DATA_COMMENT_4,AD_TYPE_MANUFACTURER_DATA_COMMENT_5,AD_TYPE_MANUFACTURER_DATA_COMMENT_6,AD_TYPE_MANUFACTURER_DATA_COMMENT_7,AD_TYPE_MANUFACTURER_DATA_COMMENT_8,AD_TYPE_MANUFACTURER_DATA_COMMENT_9,AD_TYPE_MANUFACTURER_DATA_COMMENT_10,AD_TYPE_MANUFACTURER_DATA_COMMENT_11,AD_TYPE_MANUFACTURER_DATA_COMMENT_12,AD_TYPE_MANUFACTURER_DATA_COMMENT_13,AD_TYPE_MANUFACTURER_DATA_COMMENT_14,AD_TYPE_MANUFACTURER_DATA_COMMENT_15,AD_TYPE_MANUFACTURER_DATA_COMMENT_16,AD_TYPE_MANUFACTURER_DATA_COMMENT_17,AD_TYPE_MANUFACTURER_DATA_17
 STM32_WPAN.NUMBER_OF_SERVICES=1
 STM32_WPAN.SERVICE1_CHAR1_GATT_NOTIFY_ATTRIBUTE_WRITE=GATT_NOTIFY_ATTRIBUTE_WRITE
 STM32_WPAN.SERVICE1_CHAR1_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP=\ 
 STM32_WPAN.SERVICE1_CHAR1_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP=\ 
+STM32_WPAN.SERVICE1_CHAR1_LENGTH_CHARACTERISTIC=CHAR_VALUE_LEN_VARIABLE
 STM32_WPAN.SERVICE1_CHAR1_LONG_NAME=myCharWrite
 STM32_WPAN.SERVICE1_CHAR1_PROP_WRITE=CHAR_PROP_WRITE
 STM32_WPAN.SERVICE1_CHAR1_SHORT_NAME=myCharWrite
+STM32_WPAN.SERVICE1_CHAR1_VALUE_LENGTH=247
 STM32_WPAN.SERVICE1_CHAR2_GATT_NOTIFY_READ_REQ_AND_WAIT_FOR_APPL_RESP=\ 
 STM32_WPAN.SERVICE1_CHAR2_GATT_NOTIFY_WRITE_REQ_AND_WAIT_FOR_APPL_RESP=\ 
 STM32_WPAN.SERVICE1_CHAR2_LONG_NAME=myCharNotify
