ADC measurements smoothened

--- a/Power_Tag_BLE.ioc
+++ b/Power_Tag_BLE.ioc
@@ -5,19 +5,24 @@ ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_8
 ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_9
 ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV1
 ADC1.CommonPathInternal=null|null|null|null
 ADC1.ContinuousConvMode=DISABLE
+ADC1.DMAContinuousRequests=DISABLE
 ADC1.DiscontinuousConvMode=ENABLE
+ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
 ADC1.EnableRegularConversion=ENABLE
-ADC1.IPParameters=master,EnableRegularConversion,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,NbrOfConversion,DiscontinuousConvMode,CommonPathInternal
+ADC1.IPParameters=master,EnableRegularConversion,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,NbrOfConversion,DiscontinuousConvMode,EOCSelection,DMAContinuousRequests,NbrOfDiscConversion,OversamplingMode,ClockPrescaler,CommonPathInternal
 ADC1.NbrOfConversion=6
 ADC1.NbrOfConversionFlag=1
+ADC1.NbrOfDiscConversion=6
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-6\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OversamplingMode=DISABLE
 ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.Rank-2\#ChannelRegularConversion=2
 ADC1.Rank-3\#ChannelRegularConversion=3
@@ -36,7 +41,8 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.IPParameters=Timing
+I2C1.IPParameters=Timing,OwnAddress
+I2C1.OwnAddress=0x0B
 I2C1.Timing=0x00B07CB4
 KeepUserPlacement=false
 MMTAppRegionsCount=0
@@ -104,6 +110,7 @@ NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HSEM_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.IPCC_C1_RX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.IPCC_C1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
